CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(FastPath)
INCLUDE(ExternalProject)

INCLUDE_DIRECTORIES(src lib)

IF(APPLE)
  LINK_DIRECTORIES(/usr/local/lib/)
ENDIF(APPLE)

SET(LIBGIT2_PREFIX ${CMAKE_CURRENT_BINARY_DIR}/libgit2)
EXTERNALPROJECT_ADD(libgit2
  GIT_REPOSITORY https://github.com/libgit2/libgit2
  GIT_TAG v0.25.1
  CMAKE_ARGS -DCMAKE_INSTALL_PREFIX=${LIBGIT2_PREFIX} -DBUILD_SHARED_LIBS=OFF -DBUILD_CLAR=OFF -DTHREADSAFE=ON
)
INCLUDE_DIRECTORIES(${LIBGIT2_PREFIX}/include)
LINK_DIRECTORIES(${LIBGIT2_PREFIX}/lib)

SET(LIBCURL_PREFIX ${CMAKE_CURRENT_BINARY_DIR}/libcurl)
SET(LIBCURL_CONFIGURE ${CMAKE_CURRENT_BINARY_DIR}/libcurl/src/libcurl/configure --disable-ldap  --without-librtmp --prefix=${LIBCURL_PREFIX})
IF(APPLE)
  SET(LIBCURL_CONFIGURE MACOSX_DEPLOYMENT_TARGET=10.6 ${CMAKE_CURRENT_BINARY_DIR}/libcurl/src/libcurl/configure --with-darwinssl --disable-ldap --prefix=${LIBCURL_PREFIX})
ENDIF(APPLE)

EXTERNALPROJECT_ADD(libcurl
  PREFIX libcurl
  URL https://curl.haxx.se/download/curl-7.53.1.tar.gz
  CONFIGURE_COMMAND ${LIBCURL_CONFIGURE}
)
INCLUDE_DIRECTORIES(${LIBCURL_PREFIX}/include)

ADD_EXECUTABLE(fastpath src/fastpath.c lib/base64.c lib/cJSON.c)
ADD_DEPENDENCIES(fastpath libgit2)
ADD_DEPENDENCIES(fastpath libcurl)

SET(CMAKE_C_FLAGS "-std=c99")

TARGET_LINK_LIBRARIES(fastpath git2 m)
TARGET_LINK_LIBRARIES(fastpath ${CMAKE_CURRENT_BINARY_DIR}/libcurl/src/libcurl-build/lib/.libs/libcurl.a)

IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
  TARGET_LINK_LIBRARIES(fastpath pthread ssl crypto rt)
ENDIF()


IF(APPLE)
  FIND_LIBRARY(COREFOUNDATION CoreFoundation)
  FIND_LIBRARY(SECURITY Security)
  TARGET_LINK_LIBRARIES(fastpath iconv ssh2 z ${COREFOUNDATION} ${SECURITY})
ENDIF(APPLE)

#set(CMAKE_BUILD_TYPE Debug)
